# Robot_Control

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: pure_pursuit.pc  stanley_controller.pc
devel/lib/pure_pursuit/: pure_pursuit_node
devel/lib/stanley_controller/: stanley_controller_node
devel/share/pure_pursuit/cmake/: pure_pursuitConfig.cmake
devel/share/stanley_controller/cmake/: stanley_controllerConfig.cmake
src/: temp.txt
src/pure_pursuit/: CMakeLists.txt
src/pure_pursuit/src/: pure_pursuit.cpp
src/stanley_controller/: CMakeLists.txt
src/stanley_controller/src/: stanley_controller.cpp
